--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,18 @@ body{
     color:#777777;
     float:left;
     background: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
-    width: 960px;
+    max-width: 96000px;
+    margin: auto;
+
 }
 
 #nametag{
     float:left;
-    margin:10px;
     color:#777777;
-    background: #ffffff;
-    border-color: #cccccc;
-    
+    background: rgba(42, 218, 165, 0.568);
+    height: 30px;
+    text-align: center;
+    margin-left: 70px;
 }
 
 li {
@@ -22,25 +24,17 @@ li {
     color:#777777;
     float: right;
     display:inline;
-    
+ 
 }
 
 .nav-wrapper {
-  margin: 0, 0, 0, 0;
-  padding: 40px;
+  margin: -10px 0px 0px -10px;
+  padding:40px;
   background: #ffffff;
-  border-style:solid;
-  border-color: red;
-  position:relative;
-}
-img {
-    float:left;
-    margin: 10px;
-    display:block;
 }
 
-li a {
-    display: block;
+
+li a{
     color: rgb(68, 9, 9);
     text-align: center;
     padding: 14px 16px;
@@ -50,17 +44,51 @@ li a:hover {
     background-color:  rgba(42, 218, 165, 0.568);
 }
 
+ul {
+  margin-right: 70px;
+  
+  }
+  
 footer{
     clear: both;
     padding:10px;
     background: #666666;
     border-top: 7px solid rgba(42, 218, 165, 0.568);
     text-align: center;
+    margin:0 0 30px 0;
+    color: #111;
 }
 
 #main{
     display: block;
-    margin-left: 70px;
-    margin-right: 70px;
-    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: justify;
+    border: solid 5px;
+}
+
+img {
+    float:left;
+    margin: 30px;
+    display:block;
+    clear: both;
+    border: solid 5px;
+    width: 120px;
+    height: 120px;
+}
+
+div  {
+  margin: 30px;
+  }
+  
+#header{
+  color:rgba(42, 218, 165, 0.568);
+  }
+  
+#ver{ 
+    border:none;
+    border-left:1px solid;
+    height:5px;
+    width: 1px;  
+    display:inline;
 }
